updated report and RangeTest

--- a/A2/seng438-a2-4.md
+++ b/A2/seng438-a2-4.md
@@ -2,10 +2,10 @@
 
 **Lab. Report \#2 – Requirements-Based Test Generation**
 
-| Group \#:      |     |
+| Group \#:      | 4 |
 | -------------- | --- |
-| Student Names: |     |
-|                |     |
+| Student Names: | Ding Kai Wu |
+|                | Chuhang Qi |
 |                |     |
 |                |     |
 
@@ -15,7 +15,7 @@ The goal of this assignment is to learn how to develop proper unit tests for a s
 
 # 2 Detailed description of unit test strategy
 
-Class DataUtilities
+**Class DataUtilities**
 
 double calculateColumnTotal(Values2D data, int column)
 
@@ -49,6 +49,39 @@ KeyedValues getCumulativePercentages(KeyedValues data)
 - E3. Data contains zero value, valid
 - E4. Data contains null value, invalid
 - E5. Data contains invalid data object, invalid
+
+**Class Range**
+
+*We are assuming the Range object is valid. We are not testing the Range(double lower, double upper) constructor.*
+
+double getCentralValue()
+- F1. Data contains positive value, valid
+- F2. Data contains negative value, valid
+- F3. Data contains zero value, valid
+
+double getUpperBound()
+- G1. Data contains positive value, valid
+- G2. Data contains negative value, valid
+- G3. Data contains zero value, valid
+
+double getLowerBound()
+- H1. Data contains positive value, valid
+- H2. Data contains negative value, valid
+- H3. Data contains zero value, valid
+
+boolean contains(double value)
+- I1. Data contains positive value, valid
+- I2. Data contains negative value, valid
+- I3. Data contains zero value, valid
+- I4. Value is within AUB, invalid
+- I5. Value is within BLB, invalid
+
+double constrain(double value)
+- J1. Data contains positive value, valid
+- J2. Data contains negative value, valid
+- J3. Data contains zero value, valid
+- J4. Value is within AUB, valid
+- J5. Value is within BLB, valid
 
 *Since all methods uses double as their variable type, there is no real boundary other than testing the methods can handle the min and max values for the double data type unless otherwise specified*
 
@@ -92,6 +125,35 @@ Based on our test strategy, we have the follow test methods.
 | getCumulativePercentages | getCumulativePercentagesNullTest | E4; |
 | getCumulativePercentages | getCumulativePercentagesExceptionTest | E5; |
 | getCumulativePercentages | getCumulativePercentagesMinMaxTest | E1; UB; LB = 0; |
+
+**Class Range**
+
+| Method Being Tested | Test Method Name | Relevant Conditions |
+| --- | --- | --- |
+| getCentralValue | getCentralValuePositiveTest | F1; NOM; |
+| getCentralValue | getCentralValueNegativeTest | F2; NOM; |
+| getCentralValue | getCentralValueZeroTest | F3; NOM; |
+| getCentralValue | getCentralValueMinMaxTest | F1; F2; UB; LB; |
+| getUpperBound | getUpperBoundPositiveTest | G1; NOM; |
+| getUpperBound | getUpperBoundNegativeTest | G2; NOM; |
+| getUpperBound | getUpperBoundZeroTest | G3; NOM; |
+| getUpperBound | getUpperBoundMinMaxTest | G1; G2; UB; LB; |
+| getLowerBound | getLowerBoundPositiveTest | H1; NOM; |
+| getLowerBound | getLowerBoundNegativeTest | H2; NOM; |
+| getLowerBound | getUpperBoundZeroTest | H3; NOM; |
+| getLowerBound | getLowerBoundMinMaxTest | H1; H2; UB; LB; |
+| contains | containsPositiveTest | I1; NOM; |
+| contains | containsNegativeTest | I2; NOM; |
+| contains | containsZeroTest | I3; NOM; |
+| contains | containsMinMaxTest | I1; I2; UB; LB; |
+| contains | containsAUBTest | I4; AUB; |
+| contains | containsBLBTest | I5; BLB; |
+| constrain | constrainPositiveTest | J1; NOM; |
+| constrain | constrainNegativeTest | J2; NOM; |
+| constrain | constrainZeroTest | J3; NOM; |
+| constrain | constrainMinMaxTest | J1; J2; UB; LB; |
+| constrain | containsAUBTest | J4; AUB; |
+| constrain | containsBLBTest | J5; BLB; |
 
 # 4 How the team work/effort was divided and managed
 
