--- a/A2/seng438-a2-4.md
+++ b/A2/seng438-a2-4.md
@@ -6,14 +6,14 @@
 | -------------- | --- |
 | Student Names: | Ding Kai Wu |
 |                | Chuhang Qi |
-|                |     |
-|                |     |
 
 # 1 Introduction
 
 The goal of this assignment is to learn how to develop proper unit tests for a system under test. We will be focusing on black-box testing using Equivalence Class Testing (ECT) and Boundary Value Testing (BVT). We will be using JUnit along with JMock to create test cases.
 
 # 2 Detailed description of unit test strategy
+
+We will be following the examples introduced in lecture slides. We are testing all 5 methods within the DataUtilities class, and chose 5 methods from the Range class that required no mocking. For the Range class, we have decided to not test the Range constructor. This means we will create a new Range object that's valid and error free for each test. All the testing will be focused on methods that are related to the Range object that has already been created.
 
 **Class DataUtilities**
 
@@ -52,8 +52,6 @@ KeyedValues getCumulativePercentages(KeyedValues data)
 
 **Class Range**
 
-*We are assuming the Range object is valid. We are not testing the Range(double lower, double upper) constructor.*
-
 double getCentralValue()
 - F1. Data contains positive value, valid
 - F2. Data contains negative value, valid
@@ -73,15 +71,15 @@ boolean contains(double value)
 - I1. Data contains positive value, valid
 - I2. Data contains negative value, valid
 - I3. Data contains zero value, valid
-- I4. Value is within AUB, invalid
-- I5. Value is within BLB, invalid
+- I4. Value is within AUB of Range, invalid
+- I5. Value is within BLB of Range, invalid
 
 double constrain(double value)
 - J1. Data contains positive value, valid
 - J2. Data contains negative value, valid
 - J3. Data contains zero value, valid
-- J4. Value is within AUB, valid
-- J5. Value is within BLB, valid
+- J4. Value is within AUB of Range, valid
+- J5. Value is within BLB of Range, valid
 
 *Since all methods uses double as their variable type, there is no real boundary other than testing the methods can handle the min and max values for the double data type unless otherwise specified*
 
@@ -155,14 +153,22 @@ Based on our test strategy, we have the follow test methods.
 | constrain | containsAUBTest | J4; AUB; |
 | constrain | containsBLBTest | J5; BLB; |
 
+Mocking is an easy to use tool that allows us to simulate a response from another interface. The benefit is that it allowed us to set the return value to what we desired. In an integrated testing scenario, we needed to set up the interface which takes time and potentially introduces more bugs to our code than intended. One drawback we noticed is that the mocked object may not fully represent the behavior of the interface. Because we are only simulating certain responds we may miss other functions that could alter the result. Mocking is also hard to use. We feel this is introduced by black-box testing. We are trying to mimic a interface's response, but with no access to the source code, mocking becomes harder as we have to figure out what we need in the return type. For example, calculateColumnTotal(Values2D data, int column) does not tell us we need to return getRowCount() and getValue(int row, int column) from Values2D in order to make the calculations work. 
+
 # 4 How the team work/effort was divided and managed
 
-Text…
+The testing was divided into 2 parts. One person is in charge of testing DataUtilities, and another person is testing Range. Since we have already developed the testing cases, it is relatively easy to convert them into codes. This division allowed us to work independently with each other. We can push and pull requests from our git repo without any conflicts. After all test cases are created we then look each other's code and make adjustments as needed.
+
+We learned that checking other's work is important, even when the code itself is easy to understand. Some test cases only have a few lines of code. However, during peer review we found multiple mistakes where the test case was not following our test strategies. Some mistakes were assertion errors, some were caused by errors in initializing variables and mocks. Almost all errors are logic error which makes them hard to detect.
 
 # 5 Difficulties encountered, challenges overcome, and lessons learned
 
-Text…
+One difficulty we faced was how to setup our project in Eclipse and make it work across different machines. Following the tutorial, the HAR files were initially set up as external libraries. We would get an error saying Eclipse cannot find these JAR files. Then we realized that they needed to be set up as libraries and included in the Eclipse project.
+
+Another challenge, as mentioned above, is to understand how the method works without the access to source code. This issue is not relevant in Range class as our testing cases did not require mocking. In DataUtilities class however, it took some time to get used to. Different methods may require different return types, and may call different methods from the mocked interface. All we can do is trail and error to figure out how to implement it.
+
+We learned that unit testing requires a lot of planning beforehand. If we just starts to write testing codes without a strategy, we could be missing a lot of testing cases and boundary conditions. The test cases will be messy and disorganized. Unit testing in our previous classes only needed us to write a couple test cases, and because we wrote the code, the unit tests were easy to write. In this assignment we are only giving documentations on the methods and we needed to learn how to develop test cases in a systematic way.
 
 # 6 Comments/feedback on the lab itself
 
-Text…
+As mentioned above, the tutorial section for how to setup the JAR files was not applicable to this assignment. It would be better if the instructions are on how to use the JAR files in a shared project setting. Another feedback is the documentations of certain methods. For example, calculateColumnTotal says for the data parameter "null not permitted", but it also mentions that "With invalid input, a total of zero will be returned", and throws "InvalidParameterException - if invalid data object is passed in." It is not abundantly clear what should happen if a null value is passed it. Should it displays zero or throws an exception? Is null considered an invalid parameter? We argue this is left to our interpretation and could result in incorrect testing results.
