--- a/A2/seng438-a2-4.md
+++ b/A2/seng438-a2-4.md
@@ -6,6 +6,8 @@
 | -------------- | --- |
 | Student Names: | Ding Kai Wu |
 |                | Chuhang Qi |
+|                | Uruba Alam |
+|                | Naina Gupta |
 
 # 1 Introduction
 
