--- a/A2/seng438-a2-4.md
+++ b/A2/seng438-a2-4.md
@@ -54,6 +54,13 @@ KeyedValues getCumulativePercentages(KeyedValues data)
 
 **Class Range**
 
+| Group \#:      | 4 |
+| -------------- | --- |
+| Student Names: | Ding Kai Wu |
+|                | Chuhang Qi |
+|                | Uruba Alam |
+|                | Naina Gupta |
+
 double getCentralValue()
 - F1. Data contains positive value, valid
 - F2. Data contains negative value, valid
