--- a/A2/seng438-a2-4.md
+++ b/A2/seng438-a2-4.md
@@ -4,7 +4,7 @@
 
 | Group \#:      | 4 |
 | -------------- | --- |
-| Student Names: | Ding Kai Wu |
+| Student Names: |  |
 |                | Chuhang Qi |
 |                | Uruba Alam |
 |                | Naina Gupta |
@@ -54,17 +54,11 @@ KeyedValues getCumulativePercentages(KeyedValues data)
 
 **Class Range**
 
-| Group \#:      | 4 |
-| -------------- | --- |
-| Student Names: | Ding Kai Wu |
-|                | Chuhang Qi |
-|                | Uruba Alam |
-|                | Naina Gupta |
-
 double getCentralValue()
-- F1. Data contains positive value, valid
-- F2. Data contains negative value, valid
-- F3. Data contains zero value, valid
+Returns the central (or median) value for the range.
+  - F1. Data contains positive value, valid
+  - F2. Data contains negative value, valid
+  - F3. Data contains zero value, valid
 
 double getUpperBound()
 - G1. Data contains positive value, valid
