--- a/A2/seng438-a2-4.md
+++ b/A2/seng438-a2-4.md
@@ -54,12 +54,12 @@ KeyedValues getCumulativePercentages(KeyedValues data)
 
 **Class Range**
 
-double getCentralValue()
-
+double getCentralValue():
 Returns the central (or median) value for the range.
 - F1. Data contains positive value, valid
 - F2. Data contains negative value, valid
 - F3. Data contains zero value, valid
+- F4. Data contains decimal (double) value, valid
 
 double getUpperBound()
 - G1. Data contains positive value, valid
@@ -72,6 +72,7 @@ double getLowerBound()
 - H3. Data contains zero value, valid
 
 boolean contains(double value)
+Returns true if the specified value is within the range and false otherwise.
 - I1. Data contains positive value, valid
 - I2. Data contains negative value, valid
 - I3. Data contains zero value, valid
