--- a/A2/seng438-a2-4.md
+++ b/A2/seng438-a2-4.md
@@ -53,6 +53,7 @@ KeyedValues getCumulativePercentages(KeyedValues data)
 - E5. Data contains invalid data object, invalid
 
 **Class Range**
+(create testing table!)
 
 double getCentralValue():
 Returns the central (or median) value for the range.
