--- a/A2/seng438-a2-4.md
+++ b/A2/seng438-a2-4.md
@@ -62,25 +62,28 @@ Returns the central (or median) value for the range.
 - F3. Data contains zero value, valid
 - F4. Data contains decimal (double) value, valid
 
-double getUpperBound()
+double getUpperBound():
 - G1. Data contains positive value, valid
 - G2. Data contains negative value, valid
 - G3. Data contains zero value, valid
 
-double getLowerBound()
+double getLowerBound():
+Returns the lower bound for the range.
 - H1. Data contains positive value, valid
 - H2. Data contains negative value, valid
 - H3. Data contains zero value, valid
 
-boolean contains(double value)
+boolean contains(double value):
 Returns true if the specified value is within the range and false otherwise.
 - I1. Data contains positive value, valid
 - I2. Data contains negative value, valid
 - I3. Data contains zero value, valid
 - I4. Value is within AUB of Range, invalid
 - I5. Value is within BLB of Range, invalid
+- I6. Edge Value is within bounds, valid
 
-double constrain(double value)
+double constrain(double value):
+Returns the value within the range that is closest to the specified value.
 - J1. Data contains positive value, valid
 - J2. Data contains negative value, valid
 - J3. Data contains zero value, valid
