--- a/A2/seng438-a2-4.md
+++ b/A2/seng438-a2-4.md
@@ -20,7 +20,6 @@ We will be following the examples introduced in lecture slides. We are testing a
 **Class DataUtilities**
 
 double calculateColumnTotal(Values2D data, int column)
-
 - A1. Data contains positive value, valid
 - A2. Data contains negative value, valid
 - A3. Data contains zero value, valid
@@ -57,12 +56,13 @@ KeyedValues getCumulativePercentages(KeyedValues data)
 
 double getCentralValue():
 Returns the central (or median) value for the range.
-- F1. Data contains positive value, valid
+- F1. Data contains positive value, valid 
 - F2. Data contains negative value, valid
 - F3. Data contains zero value, valid
 - F4. Data contains decimal (double) value, valid
 
 double getUpperBound():
+Returns the upper bound for the range.
 - G1. Data contains positive value, valid
 - G2. Data contains negative value, valid
 - G3. Data contains zero value, valid
