--- a/A2/seng438-a2-4.md
+++ b/A2/seng438-a2-4.md
@@ -18,7 +18,9 @@ The goal of this assignment is to learn how to develop proper unit tests for a s
 We will be following the examples introduced in lecture slides. We are testing all 5 methods within the DataUtilities class, and chose 5 methods from the Range class that required no mocking. For the Range class, we have decided to not test the Range constructor. This means we will create a new Range object that's valid and error free for each test. All the testing will be focused on methods that are related to the Range object that has already been created.
 
 **Class DataUtilities**
-
+NOTE: Valid meaning valid input for the function being tested.
+      Invalid meaning an invalid input for the function being tested (could be true or false         based on the expected output)
+      
 double calculateColumnTotal(Values2D data, int column)
 - A1. Data contains positive value, valid
 - A2. Data contains negative value, valid
@@ -92,9 +94,9 @@ Returns the value within the range that is closest to the specified value.
 
 *Since all methods uses double as their variable type, there is no real boundary other than testing the methods can handle the min and max values for the double data type unless otherwise specified*
 
-- UB : Double.MAX_VALUE
-- NOM: anything between Double.MIN_VALUE and Double.MAX_VALUE
-- LB : Double.MIN_VALUE
+- UB : Double.MAX_VALUE (upper bound value)
+- NOM: anything between Double.MIN_VALUE and Double.MAX_VALUE (between range values)
+- LB : Double.MIN_VALUE (lower bound value)
 
 # 3 Test cases developed
 
@@ -135,34 +137,6 @@ Based on our test strategy, we have the follow test methods.
 
 **Class Range**
 
-| Method Being Tested | Test Method Name | Relevant Conditions |
-| --- | --- | --- |
-| getCentralValue | getCentralValuePositiveTest | F1; NOM; |
-| getCentralValue | getCentralValueNegativeTest | F2; NOM; |
-| getCentralValue | getCentralValueZeroTest | F3; NOM; |
-| getCentralValue | getCentralValueMinMaxTest | F1; F2; UB; LB; |
-| getUpperBound | getUpperBoundPositiveTest | G1; NOM; |
-| getUpperBound | getUpperBoundNegativeTest | G2; NOM; |
-| getUpperBound | getUpperBoundZeroTest | G3; NOM; |
-| getUpperBound | getUpperBoundMinMaxTest | G1; G2; UB; LB; |
-| getLowerBound | getLowerBoundPositiveTest | H1; NOM; |
-| getLowerBound | getLowerBoundNegativeTest | H2; NOM; |
-| getLowerBound | getUpperBoundZeroTest | H3; NOM; |
-| getLowerBound | getLowerBoundMinMaxTest | H1; H2; UB; LB; |
-| contains | containsPositiveTest | I1; NOM; |
-| contains | containsNegativeTest | I2; NOM; |
-| contains | containsZeroTest | I3; NOM; |
-| contains | containsMinMaxTest | I1; I2; UB; LB; |
-| contains | containsAUBTest | I4; AUB; |
-| contains | containsBLBTest | I5; BLB; |
-| constrain | constrainPositiveTest | J1; NOM; |
-| constrain | constrainNegativeTest | J2; NOM; |
-| constrain | constrainZeroTest | J3; NOM; |
-| constrain | constrainMinMaxTest | J1; J2; UB; LB; |
-| constrain | containsAUBTest | J4; AUB; |
-| constrain | containsBLBTest | J5; BLB; |
-
-(remade a table to go with our results)
 | Method Being Tested | Test Method Name | Relevant Conditions |
 | --- | --- | --- |
 | getCentralValue | getCentralValuePositiveTest | F1; NOM; |
