--- a/A2/seng438-a2-4.md
+++ b/A2/seng438-a2-4.md
@@ -168,9 +168,9 @@ Mocking is an easy to use tool that allows us to simulate a response from anothe
 
 # 4 How the team work/effort was divided and managed
 
-The testing was divided into 2 parts. One person is in charge of testing DataUtilities, and another person is testing Range. Since we have already developed the testing cases, it is relatively easy to convert them into codes. This division allowed us to work independently with each other. We can push and pull requests from our git repo without any conflicts. After all test cases are created we then look each other's code and make adjustments as needed.
+The testing was divided into 2 teams. Two people were in charge of testing DataUtilities, and the other two tested Range. Since we already developed the testing cases, it was relatively easy to convert them into codes. This division allowed us to work independently with each other. We could push and pull requests from our git repo without any conflicts. After all test cases were created, we looked at each other's code and made adjustments as needed.
 
-We learned that checking other's work is important, even when the code itself is easy to understand. Some test cases only have a few lines of code. However, during peer review we found multiple mistakes where the test case was not following our test strategies. Some mistakes were assertion errors, some were caused by errors in initializing variables and mocks. Almost all errors are logic error which makes them hard to detect.
+We learned that checking other's work is important, even when the code itself is easy to understand. Some test cases only have a few lines of code. However, during peer review we found multiple mistakes where the test cases were not following our test strategies. Some mistakes were assertion errors, some were caused by errors in initializing variables and mocks. Almost all errors were logic error which makes them hard to detect.
 
 # 5 Difficulties encountered, challenges overcome, and lessons learned
 
