--- a/A2/seng438-a2-4.md
+++ b/A2/seng438-a2-4.md
@@ -142,21 +142,26 @@ Based on our test strategy, we have the follow test methods.
 | getCentralValue | centralValueShouldBePositive | F1; NOM; |
 | getCentralValue | centralValueShouldBeNegative | F2; NOM; |
 | getCentralValue | centralValueShouldBeZero | F3; NOM; |
+| getCentralValue | centralValueShouldBeDecimal | F4; NOM; |
 | getCentralValue | getCentralValueMinMaxTest | F1; F2; UB; LB; |
-| getUpperBound | getUpperBoundPositiveTest | G1; NOM; |
-| getUpperBound | getUpperBoundNegativeTest | G2; NOM; |
-| getUpperBound | getUpperBoundZeroTest | G3; NOM; |
+
+| getUpperBound | getUpperBoundPositiveValue | G1; NOM; |
+| getUpperBound | getUpperBoundNegativeValue | G2; NOM; |
+| getUpperBound | getUpperBoundZeroValue | G3; NOM; |
 | getUpperBound | getUpperBoundMinMaxTest | G1; G2; UB; LB; |
+
 | getLowerBound | getLowerBoundPositiveTest | H1; NOM; |
 | getLowerBound | getLowerBoundNegativeTest | H2; NOM; |
-| getLowerBound | getUpperBoundZeroTest | H3; NOM; |
+| getLowerBound | getUpperBoundZeroValue | H3; NOM; |
 | getLowerBound | getLowerBoundMinMaxTest | H1; H2; UB; LB; |
+
 | contains | containsPositiveTest | I1; NOM; |
 | contains | containsNegativeTest | I2; NOM; |
 | contains | containsZeroTest | I3; NOM; |
 | contains | containsMinMaxTest | I1; I2; UB; LB; |
 | contains | containsAUBTest | I4; AUB; |
 | contains | containsBLBTest | I5; BLB; |
+
 | constrain | constrainPositiveTest | J1; NOM; |
 | constrain | constrainNegativeTest | J2; NOM; |
 | constrain | constrainZeroTest | J3; NOM; |
