--- a/A2/seng438-a2-4.md
+++ b/A2/seng438-a2-4.md
@@ -174,7 +174,7 @@ We learned that checking other's work is important, even when the code itself is
 
 # 5 Difficulties encountered, challenges overcome, and lessons learned
 
-One difficulty we faced was how to setup our project in Eclipse and make it work across different machines. Following the tutorial, the HAR files were initially set up as external libraries. We would get an error saying Eclipse cannot find these JAR files. Then we realized that they needed to be set up as libraries and included in the Eclipse project.
+One difficulty we faced was how to setup our project in Eclipse and make it work across different machines. Following the tutorial, the JAR files were initially set up as external libraries. We would get an error saying Eclipse cannot find these JAR files. Then we realized that they needed to be set up as libraries and included in the Eclipse project.
 
 Another challenge, as mentioned above, is to understand how the method works without the access to source code. This issue is not relevant in Range class as our testing cases did not require mocking. In DataUtilities class however, it took some time to get used to. Different methods may require different return types, and may call different methods from the mocked interface. All we can do is trail and error to figure out how to implement it.
 
