--- a/A2/seng438-a2-4.md
+++ b/A2/seng438-a2-4.md
@@ -144,30 +144,27 @@ Based on our test strategy, we have the follow test methods.
 | getCentralValue | centralValueShouldBeZero | F3; NOM; |
 | getCentralValue | centralValueShouldBeDecimal | F4; NOM; |
 | getCentralValue | getCentralValueMinMaxTest | F1; F2; UB; LB; |
-
 | getUpperBound | getUpperBoundPositiveValue | G1; NOM; |
 | getUpperBound | getUpperBoundNegativeValue | G2; NOM; |
 | getUpperBound | getUpperBoundZeroValue | G3; NOM; |
 | getUpperBound | getUpperBoundMinMaxTest | G1; G2; UB; LB; |
-
-| getLowerBound | getLowerBoundPositiveTest | H1; NOM; |
-| getLowerBound | getLowerBoundNegativeTest | H2; NOM; |
-| getLowerBound | getUpperBoundZeroValue | H3; NOM; |
+| getLowerBound | getLowerBoundPositiveValue | H1; NOM; |
+| getLowerBound | getLowerBoundNegativeValue | H2; NOM; |
+| getLowerBound | getLowerBoundZeroValue | H3; NOM; |
 | getLowerBound | getLowerBoundMinMaxTest | H1; H2; UB; LB; |
-
-| contains | containsPositiveTest | I1; NOM; |
-| contains | containsNegativeTest | I2; NOM; |
-| contains | containsZeroTest | I3; NOM; |
+| contains | containsPositiveValue | I1; NOM; True|
+| contains | containsNegativeValue | I2; NOM; True|
+| contains | containsZeroValue | I3; NOM; True|
+| contains | doesntContainAboveUpperBound | I4; AUB; False |
+| contains | doesntContainBelowLowerBound | I5; BLB; False|
+| contains | containsEdgeValue | I6; NOM; True |
 | contains | containsMinMaxTest | I1; I2; UB; LB; |
-| contains | containsAUBTest | I4; AUB; |
-| contains | containsBLBTest | I5; BLB; |
-
-| constrain | constrainPositiveTest | J1; NOM; |
-| constrain | constrainNegativeTest | J2; NOM; |
-| constrain | constrainZeroTest | J3; NOM; |
+| constrain | constrainShouldBePositiveValue | J1; NOM; |
+| constrain | constrainShouldBeNegativeValue | J2; NOM; |
+| constrain | constrainShouldBeZero | J3; NOM; |
+| constrain | constrainShouldBeUpperBoundaryValue | J4; AUB; |
+| constrain | constrainShouldBeLowerBoundaryValue | J5; BLB; |
 | constrain | constrainMinMaxTest | J1; J2; UB; LB; |
-| constrain | containsAUBTest | J4; AUB; |
-| constrain | containsBLBTest | J5; BLB; |
 
 Mocking is an easy to use tool that allows us to simulate a response from another interface. The benefit is that it allowed us to set the return value to what we desired. In an integrated testing scenario, we needed to set up the interface which takes time and potentially introduces more bugs to our code than intended. One drawback we noticed is that the mocked object may not fully represent the behavior of the interface. Because we are only simulating certain responds we may miss other functions that could alter the result. Mocking is also hard to use. We feel this is introduced by black-box testing. We are trying to mimic a interface's response, but with no access to the source code, mocking becomes harder as we have to figure out what we need in the return type. For example, calculateColumnTotal(Values2D data, int column) does not tell us we need to return getRowCount() and getValue(int row, int column) from Values2D in order to make the calculations work. 
 
