--- a/A2/seng438-a2-4.md
+++ b/A2/seng438-a2-4.md
@@ -4,7 +4,7 @@
 
 | Group \#:      | 4 |
 | -------------- | --- |
-| Student Names: | Bill |
+| Student Names: | Ding Kai |
 |                | Chuhang Qi |
 |                | Uruba Alam |
 |                | Naina Gupta |
