--- a/A2/seng438-a2-4.md
+++ b/A2/seng438-a2-4.md
@@ -4,10 +4,8 @@
 
 | Group \#:      | 4 |
 | -------------- | --- |
-| Student Names: | Ding Kai |
+| Student Names: | Ding Kai Wu |
 |                | Chuhang Qi |
-|                | Uruba Alam |
-|                | Naina Gupta |
 
 # 1 Introduction
 
@@ -18,10 +16,9 @@ The goal of this assignment is to learn how to develop proper unit tests for a s
 We will be following the examples introduced in lecture slides. We are testing all 5 methods within the DataUtilities class, and chose 5 methods from the Range class that required no mocking. For the Range class, we have decided to not test the Range constructor. This means we will create a new Range object that's valid and error free for each test. All the testing will be focused on methods that are related to the Range object that has already been created.
 
 **Class DataUtilities**
-NOTE: Valid meaning valid input for the function being tested.
-      Invalid meaning an invalid input for the function being tested (could be true or false         based on the expected output)
-      
+
 double calculateColumnTotal(Values2D data, int column)
+
 - A1. Data contains positive value, valid
 - A2. Data contains negative value, valid
 - A3. Data contains zero value, valid
@@ -54,38 +51,30 @@ KeyedValues getCumulativePercentages(KeyedValues data)
 - E5. Data contains invalid data object, invalid
 
 **Class Range**
-(create testing table!)
 
-double getCentralValue():
-Returns the central (or median) value for the range.
-- F1. Data contains positive value, valid 
+double getCentralValue()
+- F1. Data contains positive value, valid
 - F2. Data contains negative value, valid
 - F3. Data contains zero value, valid
-- F4. Data contains decimal (double) value, valid
 
-double getUpperBound():
-Returns the upper bound for the range.
+double getUpperBound()
 - G1. Data contains positive value, valid
 - G2. Data contains negative value, valid
 - G3. Data contains zero value, valid
 
-double getLowerBound():
-Returns the lower bound for the range.
+double getLowerBound()
 - H1. Data contains positive value, valid
 - H2. Data contains negative value, valid
 - H3. Data contains zero value, valid
 
-boolean contains(double value):
-Returns true if the specified value is within the range and false otherwise.
+boolean contains(double value)
 - I1. Data contains positive value, valid
 - I2. Data contains negative value, valid
 - I3. Data contains zero value, valid
 - I4. Value is within AUB of Range, invalid
 - I5. Value is within BLB of Range, invalid
-- I6. Edge Value is within bounds, valid
 
-double constrain(double value):
-Returns the value within the range that is closest to the specified value.
+double constrain(double value)
 - J1. Data contains positive value, valid
 - J2. Data contains negative value, valid
 - J3. Data contains zero value, valid
@@ -94,9 +83,9 @@ Returns the value within the range that is closest to the specified value.
 
 *Since all methods uses double as their variable type, there is no real boundary other than testing the methods can handle the min and max values for the double data type unless otherwise specified*
 
-- UB : Double.MAX_VALUE (upper bound value)
-- NOM: anything between Double.MIN_VALUE and Double.MAX_VALUE (between range values)
-- LB : Double.MIN_VALUE (lower bound value)
+- UB : Double.MAX_VALUE
+- NOM: anything between Double.MIN_VALUE and Double.MAX_VALUE
+- LB : Double.MIN_VALUE
 
 # 3 Test cases developed
 
@@ -139,40 +128,38 @@ Based on our test strategy, we have the follow test methods.
 
 | Method Being Tested | Test Method Name | Relevant Conditions |
 | --- | --- | --- |
-| getCentralValue | centralValueShouldBePositive | F1; NOM; |
-| getCentralValue | centralValueShouldBeNegative | F2; NOM; |
-| getCentralValue | centralValueShouldBeZero | F3; NOM; |
-| getCentralValue | centralValueShouldBeDecimal | F4; NOM; |
+| getCentralValue | getCentralValuePositiveTest | F1; NOM; |
+| getCentralValue | getCentralValueNegativeTest | F2; NOM; |
+| getCentralValue | getCentralValueZeroTest | F3; NOM; |
 | getCentralValue | getCentralValueMinMaxTest | F1; F2; UB; LB; |
-| getUpperBound | getUpperBoundPositiveValue | G1; NOM; |
-| getUpperBound | getUpperBoundNegativeValue | G2; NOM; |
-| getUpperBound | getUpperBoundZeroValue | G3; NOM; |
+| getUpperBound | getUpperBoundPositiveTest | G1; NOM; |
+| getUpperBound | getUpperBoundNegativeTest | G2; NOM; |
+| getUpperBound | getUpperBoundZeroTest | G3; NOM; |
 | getUpperBound | getUpperBoundMinMaxTest | G1; G2; UB; LB; |
-| getLowerBound | getLowerBoundPositiveValue | H1; NOM; |
-| getLowerBound | getLowerBoundNegativeValue | H2; NOM; |
-| getLowerBound | getLowerBoundZeroValue | H3; NOM; |
+| getLowerBound | getLowerBoundPositiveTest | H1; NOM; |
+| getLowerBound | getLowerBoundNegativeTest | H2; NOM; |
+| getLowerBound | getUpperBoundZeroTest | H3; NOM; |
 | getLowerBound | getLowerBoundMinMaxTest | H1; H2; UB; LB; |
-| contains | containsPositiveValue | I1; NOM; True|
-| contains | containsNegativeValue | I2; NOM; True|
-| contains | containsZeroValue | I3; NOM; True|
-| contains | doesntContainAboveUpperBound | I4; AUB; False |
-| contains | doesntContainBelowLowerBound | I5; BLB; False|
-| contains | containsEdgeValue | I6; NOM; True |
+| contains | containsPositiveTest | I1; NOM; |
+| contains | containsNegativeTest | I2; NOM; |
+| contains | containsZeroTest | I3; NOM; |
 | contains | containsMinMaxTest | I1; I2; UB; LB; |
-| constrain | constrainShouldBePositiveValue | J1; NOM; |
-| constrain | constrainShouldBeNegativeValue | J2; NOM; |
-| constrain | constrainShouldBeZero | J3; NOM; |
-| constrain | constrainShouldBeUpperBoundaryValue | J4; AUB; |
-| constrain | constrainShouldBeLowerBoundaryValue | J5; BLB; |
+| contains | containsAUBTest | I4; AUB; |
+| contains | containsBLBTest | I5; BLB; |
+| constrain | constrainPositiveTest | J1; NOM; |
+| constrain | constrainNegativeTest | J2; NOM; |
+| constrain | constrainZeroTest | J3; NOM; |
 | constrain | constrainMinMaxTest | J1; J2; UB; LB; |
+| constrain | containsAUBTest | J4; AUB; |
+| constrain | containsBLBTest | J5; BLB; |
 
-Mocking is an easy to use tool that allows us to simulate a response from another interface. The benefit is that it allowed us to set the return value to what we desired. In an integrated testing scenario, we needed to set up the interface which takes time and potentially introduces more bugs to our code than intended. One drawback we noticed is that the mocked object may not fully represent the behavior of the interface. Because we are only simulating certain responds we may miss other functions that could alter the result. Mocking is also hard to use. We feel this is introduced by black-box testing. We are trying to mimic a interface's response, but with no access to the source code, mocking becomes harder as we have to figure out what we need in the return type. For example, calculateColumnTotal(Values2D data, int column) does not tell us we need to return getRowCount() and getValue(int row, int column) from Values2D in order to make the calculations work. 
+Mocking is an easy to use tool that allows us to simulate a response from another interface. The benefit is that it allowed us to set the return value to what we desired. In an integrated testing scenario, we needed to set up the interface which takes time and potentially introduces more bugs to our code than intended. One drawback we noticed is that the mocked object may not fully represent the behavior of the interface. Because we are only simulating certain responds we may miss other functions that could alter the result. Mocking is also hard to use. We feel this is introduced by black-box testing. We are trying to mimic a interface's response, but with no access to the source code, mocking becomes harder as we have to figure out what we need in the return type. For example, calculateColumnTotal(Values2D data, int column) does not tell us we need to return getRowCount() and getValue(int row, int column) from Values2D in order to make the calculations work.
 
 # 4 How the team work/effort was divided and managed
 
-The testing was divided into 2 teams. Two people were in charge of testing DataUtilities, and the other two tested Range. Since we already developed the testing cases, it was relatively easy to convert them into codes. This division allowed us to work independently with each other. We could push and pull requests from our git repo without any conflicts. After all test cases were created, we looked at each other's code and made adjustments as needed.
+The testing was divided into 2 parts. One person is in charge of testing DataUtilities, and another person is testing Range. Since we have already developed the testing cases, it is relatively easy to convert them into codes. This division allowed us to work independently with each other. We can push and pull requests from our git repo without any conflicts. After all test cases are created we then look each other's code and make adjustments as needed.
 
-We learned that checking other's work is important, even when the code itself is easy to understand. Some test cases only have a few lines of code. However, during peer review we found multiple mistakes where the test cases were not following our test strategies. Some mistakes were assertion errors, some were caused by errors in initializing variables and mocks. Almost all errors were logic error which makes them hard to detect.
+We learned that checking other's work is important, even when the code itself is easy to understand. Some test cases only have a few lines of code. However, during peer review we found multiple mistakes where the test case was not following our test strategies. Some mistakes were assertion errors, some were caused by errors in initializing variables and mocks. Almost all errors are logic error which makes them hard to detect.
 
 # 5 Difficulties encountered, challenges overcome, and lessons learned
 
